_sass/_global.scss
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html,
button,
input,
select,
textarea,
.pure-g [class *= "pure-u"] {
  font-family: 'Rubik', sans-serif;
}

a {
  color: $brand-primary;
  text-decoration: none;
}

a:hover,
a:focus {
  text-decoration: underline;
}

h3 {
  font-weight: 100;
}

.content-subhead {
  border-bottom: 1px solid #eee;
  color: #aaa;
  font-size: 80%;
  font-weight: 500;
  letter-spacing: 0.1em;
  padding: 0.4em 0;
  text-transform: uppercase;
}

.content {
  max-width: 48em;
  padding: 2em 1em 0;
}

@media (min-width: 48em) {
  .content {
    margin-left: 25%;
    padding: 2em 3em 0;
  }
}

